fix(toggle): spacing

--- a/src/components/toggle.module.css
+++ b/src/components/toggle.module.css
@@ -1,7 +1,7 @@
 .toggle-btn {
   width: 56px;
   height: 56px;
-  font-size: 30px;
+  font-size: 36px;
   font-weight: bold;
   display: flex;
   justify-content: center;
